# e2eChat

./: Cargo.toml  README.md  RESEARCH.md
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.res  ReactApp.re
client/src/chat/: Chat.re  dune
server/: .gitignore  Cargo.toml
server/db/: v1
server/migrations/: V1__init.sql  V2__add_users.rs
server/src/: config.rs  db.rs  main.rs  routes.rs
server/src/handlers/: auth.rs  user.rs
server/src/middlewares/: session.rs
server/src/models/: db.rs  mod.rs  session.rs  user.rs
