[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
refinery = { version = "0.8.11", features = ["rusqlite"] }
rusqlite = { version = "0.29.0", features = ["load_extension", "bundled"] }
tokio = { version = "1.32.0", features = ["full"] }
ulid = "1.1.0"
