[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
moka = { version = "0.12.1", features = ["future"] }
refinery = { version = "0.8.11", features = ["rusqlite"] }
rusqlite = { version = "0.29.0", features = ["load_extension", "bundled"] }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-rusqlite = "0.4.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "default"] }
ulid = "1.1.0"
